# cell-classifier

./: .gitignore  README.md  cell_classifier.py  cell_seg.py  classic.py  opencv_transforms.py  predict_batch.py  sift_svm.py  temperature_scaling.py  test_depth.py  threshold.py  transfer_learning.py  visualize.py
app/: CMakeLists.txt
app/cell_classifier_gui/: CMakeLists.txt  CellClassifier.cpp  CellClassifier.h  CellProcessor.cpp  CellProcessor.h  CellSegmenter.cpp  CellSegmenter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
main/: cell_classifier.py  cell_segmentation.py  sift_svm.py
scripts/: generate_anno.py  generate_seg_dataset.py  scratch.py  seg_infer.py  seg_utils.py  test_depth.py  threshold.py  train_classifier.py  train_segmentation.py  visualize.py
tests/: test_classification_models.py  test_classifier_depth.py  visualize_classifier.py
utils/: __init__.py  ext_transforms.py  misc.py  opencv_transforms.py  temperature_scaling.py
